syntax = "proto3";

option go_package = "common/scheduling_pb";
package scheduling_pb;


service SchedulingService{
  rpc Test(TestMessage) returns(TestResponse) {}
}


message TestMessage{
  string message = 1;
}

message TestResponse{
  string response = 1;
}